# autosign-lite

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
