[package]
name = "autosign_lite"
version = "0.1.0"
description = "Lightweight login and pit desktop tool"
authors = ["xieyuqiyu"]
edition = "2021"

[lib]
name = "autosign_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
